# DemoPlugin

./: CMakeLists.txt  README.md  images.qrc
includes/: DemoPlugin.hpp  DemoPluginSideBar.hpp
sources/: DemoPlugin.cpp  DemoPluginSideBar.cpp
